UI: add link class
(integrated from master branch change 9.2.1-1084-g0bd89dd by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -4,6 +4,13 @@
     font: message-box;
 }
 
+.link
+{
+    cursor: pointer;
+    color: @special;
+    text-decoration: underline;
+}
+
 description, tab, textbox, menulist, menuitem, menu, treecol, button, toolbarbutton,
 checkbox, radio, tabpanels, listitem, richlistitem, listheader
 {
