--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -108,7 +108,7 @@
  * have to put the background one node lower
  */
 #komodo_main > #komodo-box,
-:root:not([hidechrome="true"]):not(.pref-window),
+:root:not([hidechrome="true"]):not(.pref-window)
 {
     &:not(#komodo_main)
     {
@@ -116,6 +116,11 @@
     }
     
     color: @foreground;
+}
+
+#komodo_main:not([hidechrome="true"])
+{
+    background: @background;
 }
 
 #komodo_main[sizemode="maximized"]
