--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -192,7 +192,7 @@ tab
     }
 }
 
-tabs
+:not(.embedded) > tabs
 {
     box-shadow: inset 0px -2px 0px 0px @contrast;
     
@@ -222,6 +222,32 @@ tabs
     {
         position: relative;
         z-index: 100;
+        border-bottom: 2px solid @special;
+    }
+}
+
+tabbox.embedded
+{
+    tabs
+    {
+        background: @contrast;
+        padding: 0;
+        -moz-box-align: stretch;
+    }
+    
+    tab:not([selected])
+    {
+        opacity: 0.7;
+        border-bottom: 2px solid transparent;
+        
+        &:hover
+        {
+            border-bottom: 2px solid fade(@special, 50%);
+        }
+    }
+    
+    tab[selected]
+    {
         border-bottom: 2px solid @special;
     }
 }
