Editor: Fix autocompletions not having focus
(integrated from master branch change 9.2.1-1101-g7c24e71 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -11,6 +11,13 @@
     text-decoration: underline;
 }
 
+scintilla[anonid="scintilla"] > panel[anonid="autocompletepopup"]
+{
+    & > hbox > grid
+    {
+        -moz-user-focus: normal;
+    }
+}
 description, tab, textbox, menulist, menuitem, menu, treecol, button, toolbarbutton,
 checkbox, radio, tabpanels, listitem, richlistitem, listheader
 {
