--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -50,10 +50,25 @@
 .state-info { color: @state-info; }
 .state-ok { color: @state-ok; }
 
-.box-state-error { color: @state-foreground; background-color: @state-error; }
-.box-state-warning { color: @state-foreground; background-color: @state-warning; }
-.box-state-info { color: @state-foreground; background-color: @state-info; }
-.box-state-ok { color: @state-foreground; background-color: @state-ok; }
+.box-state-error {
+    color: @state-foreground !important;
+    background-color: @state-error !important;
+}
+
+.box-state-warning {
+    color: @state-foreground !important;
+    background-color: @state-warning !important;
+}
+
+.box-state-info {
+    color: @state-foreground !important;
+    background-color: @state-info !important;
+}
+
+.box-state-ok {
+    color: @state-foreground !important;
+    background-color: @state-ok !important;
+}
 
 /* Special Classes */
 
