UI: Add tabbed-view class
(integrated from master branch change 9.2.1-1134-ga522f2c by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -17,7 +17,7 @@
 @import url("chrome://komodo/skin/global/components/customize.less");
 
 /* Don't show new tab button on anything but the buffer tabs */
-:not(#tabbed-view) > tabs toolbarbutton[anonid="tabs-new"]
+:not(#tabbed-view):not(.tabbed-view) > tabs toolbarbutton[anonid="tabs-new"]
 {
     visibility: collapse;
 }
