--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -117,6 +117,7 @@ tab[widget="runoutput-desc-tabpanel"] { .icon(); .icon-terminal2(); }
 tab[widget="projectUnitTestsResults_tabpanel"] { .icon(); .icon-lab(); }
 tab[widget="notifications-widget"] { .icon(); .icon-info2(); }
 tab[widget="console-widget"] { .icon(); .icon-display3(); }
+tab[widget="terminal-widget"] { .icon(); .icon-terminal(); }
 tab[widget^="debugsession"]:not([dbg_status="interactive"]) { .icon(); .icon-play(); }
 tab[widget^="debugsession"][dbg_status="interactive"] { .icon(); .icon-play-circle(); }
 tab[widget^="findresults_tabpanel"] { .icon(); .icon-binoculars(); }
