Icons: Added spinbutton icons
(integrated from master branch change 9.2.1-1196-g4c7c43b by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -329,3 +329,6 @@ menu > .menu-right
 {
     .icon-download();
 }
+
+button.spinbuttons-up { .icon(); .icon-caret-up(); }
+button.spinbuttons-down { .icon(); .icon-caret-down(); }
