--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?l8w1uz');
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?l8w1uz#iefix') format('embedded-opentype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?l8w1uz') format('truetype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?l8w1uz') format('woff'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?l8w1uz#icomoon') format('svg');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?k1ba1j');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?k1ba1j#iefix') format('embedded-opentype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?k1ba1j') format('truetype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?k1ba1j') format('woff'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?k1ba1j#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -26,6 +26,26 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-cordova {
+    &:before {
+        content: @icon-cordova;
+    }
+}
+.icon-phonegap {
+    &:before {
+        content: @icon-phonegap;
+    }
+}
+.icon-gulp {
+    &:before {
+        content: @icon-gulp;
+    }
+}
+.icon-grunt {
+    &:before {
+        content: @icon-grunt;
+    }
+}
 .icon-menu4 {
     &:before {
         content: @icon-menu4;
@@ -949,6 +969,16 @@
 .icon-users {
     &:before {
         content: @icon-users;
+    }
+}
+.icon-caret-down {
+    &:before {
+        content: @icon-caret-down;
+    }
+}
+.icon-caret-up {
+    &:before {
+        content: @icon-caret-up;
     }
 }
 .icon-circle-o {
