--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -185,6 +185,8 @@
 @icon-arrows-alt: "\f0b2";
 @icon-group: "\f0c0";
 @icon-users: "\f0c0";
+@icon-caret-down: "\f0d7";
+@icon-caret-up: "\f0d8";
 @icon-circle-o: "\f10c";
 @icon-play-circle: "\f144";
 @icon-external-link-square: "\f14c";
