Wizard: See extended description
- Updated to reflect UI SDK changes
- Fixed XUL binding issues
- Implemented UX

(integrated from master branch change 9.2.1-1197-g468cbde by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -13,6 +13,16 @@ dialog
   -moz-binding: url("chrome://komodo/content/bindings/windows.xml#dialog-chromeless");
 }
 
+wizard[deferred]
+{
+  -moz-binding: none !important;
+}
+
+:root wizard
+{
+  -moz-binding: url("chrome://komodo/content/bindings/wizard.xml#wizard");
+}
+
 #toolbox_main {
   -moz-binding: url("chrome://komodo/content/bindings/toolbar.xml#toolbox-drag");
 }
