--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -7,6 +7,7 @@
 @import url("chrome://komodo/skin/global/prefs.less");
 @import url("chrome://komodo/skin/global/icons.less");
 @import url("chrome://komodo/skin/global/mixins.less");
+@import url("chrome://komodo/skin/global/wizard.less");
 @import url("chrome://komodo/skin/global/main.less");
 
 @import url("chrome://komodo/skin/global/scrollbars.less");
