ColorScheme: Simplified color scheme fields
(integrated from master branch change 9.2.1-1222-g67188da by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/colors.less
+++ b/src/chrome/komodo/skin/global/colors.less
@@ -16,16 +16,11 @@
 @textbox-foreground: #FFF;
 @caption: #A0A0A8;
 
-/* Special Windows */
+/* Special Elements */
 @special: #3F8AFF;
+@secondary-special: #3F8AFF;
 @foreground-special: #FFF;
 @contrast-special: #326ECD;
-
-/* Special Elements */
-@button-special: #326ECD;
-@button-foreground-special: #FFF;
-@selected-special: #326ECD;
-@selected-foreground-special: #FFF;
 @textbox-special: #FFF;
 @textbox-foreground-special: #565656;
 @icons-special: #FFF;
@@ -34,8 +29,8 @@
 @widget: @background;
 @foreground-widget: @foreground;
 @contrast-widget: @contrast;
-@selected-widget: @special;
-@selected-foreground-widget: @special;
+@special-widget: @special;
+@special-foreground-widget: @special;
 @textbox-widget: @contrast;
 @textbox-foreground-widget: @foreground;
 @icons-widget: @icons;
