--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -99,7 +99,7 @@
 .menu-icon > .toolbarbutton-text {
     visibility: visible; .icon(); .icon-menu4();
     font-size: 24px !important;
-    text-shadow: 2px 2px 0 @button-special;
+    text-shadow: 2px 2px 0 @contrast-special;
     margin: 0 6px;
 }
 .menu-icon > dropmarker { visibility: collapse; }
