--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -11,7 +11,7 @@
     
     toolbaritem
     {
-        background: @button-special;
+        background: @contrast-special;
         border-radius: 1px;
         margin: 5px;
         padding: 0;
@@ -23,11 +23,11 @@
             margin: 0;
             padding: 5px;
             border-radius: 1px;
-            color: @button-foreground-special;
+            color: @foreground-special;
             
             &:hover
             {
-                background: darken(@button-special, 10%);
+                background: darken(@contrast-special, 10%);
             }
         }
     }
