--- a/src/modules/breadcrumbs/skin/breadcrumbs.less
+++ b/src/modules/breadcrumbs/skin/breadcrumbs.less
@@ -65,7 +65,7 @@
         .breadcrumb-arrow
         {
             font-size: 14px;
-            color: @special;
+            color: @secondary-special;
             margin: 0 2px 0 2px;
         }
     }
