--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -205,8 +205,8 @@
             
             &[selected="true"]
             {
-                color: @selected-foreground-special;
-                background: @selected-special;
+                color: @foreground-special;
+                background: @contrast-special;
             }
             
             label, description
