--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -7,7 +7,7 @@
 .link
 {
     cursor: pointer;
-    color: @special;
+    color: @secondary-special;
     text-decoration: underline;
 }
 
@@ -111,7 +111,7 @@ menupopup
     
     menu > .menu-right
     {
-        color: @special;
+        color: @secondary-special;
     }
     
     menu:hover > .menu-right
@@ -177,7 +177,7 @@ toolbarbutton.menu-icon > label
 
 toolbarbutton[checked="true"]
 {
-    color: @special;
+    color: @secondary-special;
 }
 
 toolbarbutton:not(.box-inherit):not(.button)
@@ -221,7 +221,7 @@ tab
         
         &:hover
         {
-            border-bottom: 2px solid fade(@special, 50%);
+            border-bottom: 2px solid fade(@secondary-special, 50%);
         }
     }
     
@@ -229,7 +229,7 @@ tab
     {
         position: relative;
         z-index: 100;
-        border-bottom: 2px solid @special;
+        border-bottom: 2px solid @secondary-special;
     }
 }
 
@@ -249,13 +249,13 @@ tabbox.embedded
         
         &:hover
         {
-            border-bottom: 2px solid fade(@special, 50%);
+            border-bottom: 2px solid fade(@secondary-special, 50%);
         }
     }
     
     tab[selected]
     {
-        border-bottom: 2px solid @special;
+        border-bottom: 2px solid @secondary-special;
     }
 }
 
@@ -271,7 +271,7 @@ checkbox.label-only
 {
     &[checked="true"]
     {
-        color: @special;
+        color: @secondary-special;
     }
     
     &:hover
@@ -305,7 +305,7 @@ textbox, menulist
     {
         &:focus, &:active, &[focused]
         {
-            box-shadow: 0px 0px 0px 2px @special;
+            box-shadow: 0px 0px 0px 2px @secondary-special;
         }
     }
 }
@@ -314,7 +314,7 @@ toolbarbutton, button
 {
     &:focus
     {
-        outline: 1px dotted @special;
+        outline: 1px dotted @secondary-special;
     }
 }
 
@@ -322,7 +322,7 @@ toolbarbutton, button
 {
     &:focus, &:active, &[focused]
     {
-        box-shadow: 0px 0px 0px 2px @special;
+        box-shadow: 0px 0px 0px 2px @secondary-special;
     }
 }
 
@@ -375,7 +375,7 @@ tree, listbox, richlistbox
     
     textbox, menulist
     {
-        box-shadow: 0px 0px 0px 1px fade(@special, 50%);
+        box-shadow: 0px 0px 0px 1px fade(@secondary-special, 50%);
     }
 }
 
@@ -577,8 +577,8 @@ button.unstyled
     
     &:hover
     {
-        background: @button-special;
-        color: @button-foreground-special;
+        background: @contrast-special;
+        color: @foreground-special;
     }
 }
 
@@ -595,7 +595,7 @@ spinbuttons
 
 button[type="checkbox"][checked="true"]
 {
-    box-shadow: inset 0px 0px 0px 1px @special;
+    box-shadow: inset 0px 0px 0px 1px @secondary-special;
 }
 
 /* Groupboxes */
@@ -730,23 +730,23 @@ page.widget
     
     treechildren::-moz-tree-row(selected)
     {
-        background: @selected-widget;
-        color: @selected-foreground-widget;
+        background: @special-widget;
+        color: @special-foreground-widget;
     }
     
     treechildren::-moz-tree-cell-text(selected)
     {
-        color: @selected-foreground-widget;
+        color: @special-foreground-widget;
     }
     
     &[selected="true"]
     {
-        background: @selected-widget;
-        color: @selected-foreground-widget;
+        background: @special-widget;
+        color: @special-foreground-widget;
         
         description, label
         {
-            color: @selected-foreground-widget;
+            color: @special-foreground-widget;
         }
     }
     
@@ -774,7 +774,7 @@ page.widget
         {
             &:focus, &:active, &[focused]
             {
-                box-shadow: 0px 0px 0px 2px @selected-widget;
+                box-shadow: 0px 0px 0px 2px @special-widget;
             }
         }
     }
