UI: Don't add background to embedded dialogs
(integrated from master branch change 9.2.1-1226-ge9cdb64 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -612,7 +612,11 @@ button[type="checkbox"][checked="true"]
 dialog:root,
 .pref-window
 {
-    background: @contrast;
+    &:not(.embedded)
+    {
+        background: @contrast;
+    }
+    
     color: @foreground;
     
     .dialog-button-box
