UI: Added support for userChrome.less
rn=

(integrated from master branch change 9.2.1-1228-g0ad8584 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -17,6 +17,8 @@
 @import url("chrome://komodo/skin/global/components/scc.less");
 @import url("chrome://komodo/skin/global/components/customize.less");
 
+@import url("resource://profile/userChrome.less");
+
 /* Don't show new tab button on anything but the buffer tabs */
 :not(#tabbed-view):not(.tabbed-view) > tabs toolbarbutton[anonid="tabs-new"]
 {
