UX: Added classic mode (aka I don't like changes mode)
The classic mode "emulates" old UI and UX, helping users transition to
the new Komodo version.
rn=

(integrated from master branch change 9.2.1-1232-gcbd9deb by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -9,6 +9,7 @@
 @import url("chrome://komodo/skin/global/mixins.less");
 @import url("chrome://komodo/skin/global/wizard.less");
 @import url("chrome://komodo/skin/global/main.less");
+@import url("chrome://komodo/skin/global/classic.toolbar.less");
 
 @import url("chrome://komodo/skin/global/scrollbars.less");
 
@@ -17,6 +18,7 @@
 @import url("chrome://komodo/skin/global/components/scc.less");
 @import url("chrome://komodo/skin/global/components/customize.less");
 
+@import url("resource://profile/classic.less");
 @import url("resource://profile/userChrome.less");
 
 /* Don't show new tab button on anything but the buffer tabs */
