Commando: Update styling to fit recent UI changes
(integrated from master branch change 9.2.1-1238-g1088017 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/scrollbars.less
+++ b/src/chrome/komodo/skin/global/scrollbars.less
@@ -22,6 +22,8 @@ scrollbar
     background: transparent;
     opacity: 1.0 !important;
     margin: 1px;
+    z-index: 999;
+    position: relative;
     
     &[orient="vertical"]
     {
@@ -59,8 +61,18 @@ dialog, :root.dialog, :root.pref-window
 
 #commando-panel
 {
+    scrollbar
+    {
+        margin-left: -16px;
+    }
+    
     scrollbar thumb
     {
-        background: @selected;
+        background: @contrast-special;
     }
+}
+
+:root.special scrollbar thumb
+{
+    background: @contrast-special;
 }
