UI: Fix left/right toolbar dimensions being inconsistent
(integrated from master branch change 9.2.1-1239-g9b55633 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/classic.toolbar.less
+++ b/src/chrome/komodo/skin/global/classic.toolbar.less
@@ -3,20 +3,20 @@
     #main-toolboxrow
     {
         -moz-box-ordinal-group: 0;
-        overflow: -moz-hidden-unscrollable !important;
         width: auto !important;
-        -moz-binding: none;
-        -moz-box-flex: 0 !important;
+        -moz-binding: unset !important;
     }
     
     #second-toolboxrow
     {
         -moz-box-ordinal-group: 1;
-        overflow: -moz-hidden-unscrollable !important;
-        -moz-box-pack: start !important;
         width: auto !important;
-        -moz-binding: none;
-        -moz-box-flex: 0 !important;
+        -moz-binding: unset !important;
+        
+        spacer
+        {
+            visibility: collapse;
+        }
     }
     
     #middle-toolboxrow
