--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -44,7 +44,7 @@ tree.codetree {
     -moz-binding: url('chrome://komodo/content/bindings/widgets.xml#cbtree');
 }
 
-#main-toolboxrow toolbar > toolbaritem > toolbarbutton[type=menu] {
+#main-toolboxrow toolbar > toolbaritem > toolbarbutton[type=menu]:not(.overflow-toolbarbutton) {
   -moz-binding: url("chrome://global/content/bindings/toolbarbutton.xml#menu-vertical");
 }
 
