--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?k1ba1j');
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?k1ba1j#iefix') format('embedded-opentype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?k1ba1j') format('truetype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?k1ba1j') format('woff'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?k1ba1j#icomoon') format('svg');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?nnc3wm');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?nnc3wm#iefix') format('embedded-opentype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?nnc3wm') format('truetype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?nnc3wm') format('woff'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?nnc3wm#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -226,294 +226,9 @@
         content: @icon-code2;
     }
 }
-.icon-quill4 {
+.icon-regexp-14 {
     &:before {
-        content: @icon-quill4;
-    }
-}
-.icon-bookmark {
-    &:before {
-        content: @icon-bookmark;
-    }
-}
-.icon-files-empty2 {
-    &:before {
-        content: @icon-files-empty2;
-    }
-}
-.icon-file-plus2 {
-    &:before {
-        content: @icon-file-plus2;
-    }
-}
-.icon-copy3 {
-    &:before {
-        content: @icon-copy3;
-    }
-}
-.icon-paste2 {
-    &:before {
-        content: @icon-paste2;
-    }
-}
-.icon-folder-plus {
-    &:before {
-        content: @icon-folder-plus;
-    }
-}
-.icon-folder-open {
-    &:before {
-        content: @icon-folder-open;
-    }
-}
-.icon-envelop {
-    &:before {
-        content: @icon-envelop;
-    }
-}
-.icon-printer3 {
-    &:before {
-        content: @icon-printer3;
-    }
-}
-.icon-display2 {
-    &:before {
-        content: @icon-display2;
-    }
-}
-.icon-undo2 {
-    &:before {
-        content: @icon-undo2;
-    }
-}
-.icon-redo2 {
-    &:before {
-        content: @icon-redo2;
-    }
-}
-.icon-users2 {
-    &:before {
-        content: @icon-users2;
-    }
-}
-.icon-users4 {
-    &:before {
-        content: @icon-users4;
-    }
-}
-.icon-bug {
-    &:before {
-        content: @icon-bug;
-    }
-}
-.icon-lab {
-    &:before {
-        content: @icon-lab;
-    }
-}
-.icon-briefcase3 {
-    &:before {
-        content: @icon-briefcase3;
-    }
-}
-.icon-power2 {
-    &:before {
-        content: @icon-power2;
-    }
-}
-.icon-menu3 {
-    &:before {
-        content: @icon-menu3;
-    }
-}
-.icon-sphere2 {
-    &:before {
-        content: @icon-sphere2;
-    }
-}
-.icon-earth2 {
-    &:before {
-        content: @icon-earth2;
-    }
-}
-.icon-question4 {
-    &:before {
-        content: @icon-question4;
-    }
-}
-.icon-plus2 {
-    &:before {
-        content: @icon-plus2;
-    }
-}
-.icon-plus-circle {
-    &:before {
-        content: @icon-plus-circle;
-    }
-}
-.icon-plus-circle2 {
-    &:before {
-        content: @icon-plus-circle2;
-    }
-}
-.icon-minus-circle2 {
-    &:before {
-        content: @icon-minus-circle2;
-    }
-}
-.icon-info2 {
-    &:before {
-        content: @icon-info2;
-    }
-}
-.icon-cancel-circle2 {
-    &:before {
-        content: @icon-cancel-circle2;
-    }
-}
-.icon-cross3 {
-    &:before {
-        content: @icon-cross3;
-    }
-}
-.icon-checkmark {
-    &:before {
-        content: @icon-checkmark;
-    }
-}
-.icon-checkmark2 {
-    &:before {
-        content: @icon-checkmark2;
-    }
-}
-.icon-play3 {
-    &:before {
-        content: @icon-play3;
-    }
-}
-.icon-pause {
-    &:before {
-        content: @icon-pause;
-    }
-}
-.icon-stop {
-    &:before {
-        content: @icon-stop;
-    }
-}
-.icon-play {
-    &:before {
-        content: @icon-play;
-    }
-}
-.icon-pause2 {
-    &:before {
-        content: @icon-pause2;
-    }
-}
-.icon-stop2 {
-    &:before {
-        content: @icon-stop2;
-    }
-}
-.icon-arrow-up3 {
-    &:before {
-        content: @icon-arrow-up3;
-    }
-}
-.icon-arrow-right2 {
-    &:before {
-        content: @icon-arrow-right2;
-    }
-}
-.icon-arrow-right3 {
-    &:before {
-        content: @icon-arrow-right3;
-    }
-}
-.icon-arrow-down3 {
-    &:before {
-        content: @icon-arrow-down3;
-    }
-}
-.icon-arrow-left2 {
-    &:before {
-        content: @icon-arrow-left2;
-    }
-}
-.icon-arrow-up5 {
-    &:before {
-        content: @icon-arrow-up5;
-    }
-}
-.icon-arrow-right5 {
-    &:before {
-        content: @icon-arrow-right5;
-    }
-}
-.icon-arrow-down5 {
-    &:before {
-        content: @icon-arrow-down5;
-    }
-}
-.icon-arrow-left5 {
-    &:before {
-        content: @icon-arrow-left5;
-    }
-}
-.icon-checkbox-checked2 {
-    &:before {
-        content: @icon-checkbox-checked2;
-    }
-}
-.icon-checkbox-unchecked2 {
-    &:before {
-        content: @icon-checkbox-unchecked2;
-    }
-}
-.icon-radio-checked {
-    &:before {
-        content: @icon-radio-checked;
-    }
-}
-.icon-radio-unchecked {
-    &:before {
-        content: @icon-radio-unchecked;
-    }
-}
-.icon-scissors2 {
-    &:before {
-        content: @icon-scissors2;
-    }
-}
-.icon-regexp2 {
-    &:before {
-        content: @icon-regexp2;
-    }
-}
-.icon-circle-css {
-    &:before {
-        content: @icon-circle-css;
-    }
-}
-.icon-circle-code {
-    &:before {
-        content: @icon-circle-code;
-    }
-}
-.icon-terminal {
-    &:before {
-        content: @icon-terminal;
-    }
-}
-.icon-npm {
-    &:before {
-        content: @icon-npm;
-    }
-}
-.icon-scc {
-    &:before {
-        content: @icon-scc;
+        content: @icon-regexp-14;
     }
 }
 .icon-search {
@@ -921,6 +636,11 @@
         content: @icon-download;
     }
 }
+.icon-refresh {
+    &:before {
+        content: @icon-refresh;
+    }
+}
 .icon-bold {
     &:before {
         content: @icon-bold;
@@ -929,6 +649,21 @@
 .icon-italic {
     &:before {
         content: @icon-italic;
+    }
+}
+.icon-text-height {
+    &:before {
+        content: @icon-text-height;
+    }
+}
+.icon-text-width {
+    &:before {
+        content: @icon-text-width;
+    }
+}
+.icon-align-left2 {
+    &:before {
+        content: @icon-align-left2;
     }
 }
 .icon-stop3 {
@@ -949,6 +684,31 @@
 .icon-times-circle {
     &:before {
         content: @icon-times-circle;
+    }
+}
+.icon-arrow-left {
+    &:before {
+        content: @icon-arrow-left;
+    }
+}
+.icon-arrow-right {
+    &:before {
+        content: @icon-arrow-right;
+    }
+}
+.icon-arrow-up {
+    &:before {
+        content: @icon-arrow-up;
+    }
+}
+.icon-arrow-down {
+    &:before {
+        content: @icon-arrow-down;
+    }
+}
+.icon-asterisk2 {
+    &:before {
+        content: @icon-asterisk2;
     }
 }
 .icon-arrow-circle-right {
@@ -1009,6 +769,316 @@
 .icon-stop-circle {
     &:before {
         content: @icon-stop-circle;
+    }
+}
+.icon-recurse-14 {
+    &:before {
+        content: @icon-recurse-14;
+    }
+}
+.icon-case-insensitive {
+    &:before {
+        content: @icon-case-insensitive;
+    }
+}
+.icon-case-sensitive {
+    &:before {
+        content: @icon-case-sensitive;
+    }
+}
+.icon-smart-case {
+    &:before {
+        content: @icon-smart-case;
+    }
+}
+.icon-quill4 {
+    &:before {
+        content: @icon-quill4;
+    }
+}
+.icon-bookmark {
+    &:before {
+        content: @icon-bookmark;
+    }
+}
+.icon-files-empty2 {
+    &:before {
+        content: @icon-files-empty2;
+    }
+}
+.icon-file-plus2 {
+    &:before {
+        content: @icon-file-plus2;
+    }
+}
+.icon-copy3 {
+    &:before {
+        content: @icon-copy3;
+    }
+}
+.icon-paste2 {
+    &:before {
+        content: @icon-paste2;
+    }
+}
+.icon-folder-plus {
+    &:before {
+        content: @icon-folder-plus;
+    }
+}
+.icon-folder-open {
+    &:before {
+        content: @icon-folder-open;
+    }
+}
+.icon-envelop {
+    &:before {
+        content: @icon-envelop;
+    }
+}
+.icon-printer3 {
+    &:before {
+        content: @icon-printer3;
+    }
+}
+.icon-display2 {
+    &:before {
+        content: @icon-display2;
+    }
+}
+.icon-undo2 {
+    &:before {
+        content: @icon-undo2;
+    }
+}
+.icon-redo2 {
+    &:before {
+        content: @icon-redo2;
+    }
+}
+.icon-users2 {
+    &:before {
+        content: @icon-users2;
+    }
+}
+.icon-users4 {
+    &:before {
+        content: @icon-users4;
+    }
+}
+.icon-bug {
+    &:before {
+        content: @icon-bug;
+    }
+}
+.icon-lab {
+    &:before {
+        content: @icon-lab;
+    }
+}
+.icon-briefcase3 {
+    &:before {
+        content: @icon-briefcase3;
+    }
+}
+.icon-power2 {
+    &:before {
+        content: @icon-power2;
+    }
+}
+.icon-menu3 {
+    &:before {
+        content: @icon-menu3;
+    }
+}
+.icon-sphere2 {
+    &:before {
+        content: @icon-sphere2;
+    }
+}
+.icon-earth2 {
+    &:before {
+        content: @icon-earth2;
+    }
+}
+.icon-question4 {
+    &:before {
+        content: @icon-question4;
+    }
+}
+.icon-plus2 {
+    &:before {
+        content: @icon-plus2;
+    }
+}
+.icon-plus-circle {
+    &:before {
+        content: @icon-plus-circle;
+    }
+}
+.icon-plus-circle2 {
+    &:before {
+        content: @icon-plus-circle2;
+    }
+}
+.icon-minus-circle2 {
+    &:before {
+        content: @icon-minus-circle2;
+    }
+}
+.icon-info2 {
+    &:before {
+        content: @icon-info2;
+    }
+}
+.icon-cancel-circle2 {
+    &:before {
+        content: @icon-cancel-circle2;
+    }
+}
+.icon-cross3 {
+    &:before {
+        content: @icon-cross3;
+    }
+}
+.icon-checkmark {
+    &:before {
+        content: @icon-checkmark;
+    }
+}
+.icon-checkmark2 {
+    &:before {
+        content: @icon-checkmark2;
+    }
+}
+.icon-play3 {
+    &:before {
+        content: @icon-play3;
+    }
+}
+.icon-pause {
+    &:before {
+        content: @icon-pause;
+    }
+}
+.icon-stop {
+    &:before {
+        content: @icon-stop;
+    }
+}
+.icon-play {
+    &:before {
+        content: @icon-play;
+    }
+}
+.icon-pause2 {
+    &:before {
+        content: @icon-pause2;
+    }
+}
+.icon-stop2 {
+    &:before {
+        content: @icon-stop2;
+    }
+}
+.icon-arrow-up3 {
+    &:before {
+        content: @icon-arrow-up3;
+    }
+}
+.icon-arrow-right2 {
+    &:before {
+        content: @icon-arrow-right2;
+    }
+}
+.icon-arrow-right3 {
+    &:before {
+        content: @icon-arrow-right3;
+    }
+}
+.icon-arrow-down3 {
+    &:before {
+        content: @icon-arrow-down3;
+    }
+}
+.icon-arrow-left2 {
+    &:before {
+        content: @icon-arrow-left2;
+    }
+}
+.icon-arrow-up5 {
+    &:before {
+        content: @icon-arrow-up5;
+    }
+}
+.icon-arrow-right5 {
+    &:before {
+        content: @icon-arrow-right5;
+    }
+}
+.icon-arrow-down5 {
+    &:before {
+        content: @icon-arrow-down5;
+    }
+}
+.icon-arrow-left5 {
+    &:before {
+        content: @icon-arrow-left5;
+    }
+}
+.icon-checkbox-checked2 {
+    &:before {
+        content: @icon-checkbox-checked2;
+    }
+}
+.icon-checkbox-unchecked2 {
+    &:before {
+        content: @icon-checkbox-unchecked2;
+    }
+}
+.icon-radio-checked {
+    &:before {
+        content: @icon-radio-checked;
+    }
+}
+.icon-radio-unchecked {
+    &:before {
+        content: @icon-radio-unchecked;
+    }
+}
+.icon-scissors2 {
+    &:before {
+        content: @icon-scissors2;
+    }
+}
+.icon-regexp2 {
+    &:before {
+        content: @icon-regexp2;
+    }
+}
+.icon-circle-css {
+    &:before {
+        content: @icon-circle-css;
+    }
+}
+.icon-circle-code {
+    &:before {
+        content: @icon-circle-code;
+    }
+}
+.icon-terminal {
+    &:before {
+        content: @icon-terminal;
+    }
+}
+.icon-npm {
+    &:before {
+        content: @icon-npm;
+    }
+}
+.icon-scc {
+    &:before {
+        content: @icon-scc;
     }
 }
 
