--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -36,64 +36,7 @@
 @icon-database2: "\e034";
 @icon-markup: "\e035";
 @icon-code2: "\e036";
-@icon-quill4: "\e91b";
-@icon-bookmark: "\e994";
-@icon-files-empty2: "\e9a0";
-@icon-file-plus2: "\e9a2";
-@icon-copy3: "\e9c7";
-@icon-paste2: "\e9ca";
-@icon-folder-plus: "\e9d4";
-@icon-folder-open: "\e9dc";
-@icon-envelop: "\ea30";
-@icon-printer3: "\ea69";
-@icon-display2: "\ea74";
-@icon-undo2: "\eabf";
-@icon-redo2: "\eac0";
-@icon-users2: "\eaff";
-@icon-users4: "\eb0c";
-@icon-bug: "\eb78";
-@icon-lab: "\ebea";
-@icon-briefcase3: "\ec04";
-@icon-power2: "\ec49";
-@icon-menu3: "\ec6d";
-@icon-sphere2: "\ec92";
-@icon-earth2: "\ec97";
-@icon-question4: "\ed56";
-@icon-plus2: "\ed5b";
-@icon-plus-circle: "\ed5f";
-@icon-plus-circle2: "\ed61";
-@icon-minus-circle2: "\ed62";
-@icon-info2: "\ed64";
-@icon-cancel-circle2: "\ed66";
-@icon-cross3: "\ed6e";
-@icon-checkmark: "\ed6f";
-@icon-checkmark2: "\ed70";
-@icon-play3: "\ed7e";
-@icon-pause: "\ed7f";
-@icon-stop: "\ed80";
-@icon-play: "\ed85";
-@icon-pause2: "\ed86";
-@icon-stop2: "\ed87";
-@icon-arrow-up3: "\edb9";
-@icon-arrow-right2: "\edbc";
-@icon-arrow-right3: "\edbd";
-@icon-arrow-down3: "\edc1";
-@icon-arrow-left2: "\edc4";
-@icon-arrow-up5: "\edc7";
-@icon-arrow-right5: "\edc8";
-@icon-arrow-down5: "\edc9";
-@icon-arrow-left5: "\edca";
-@icon-checkbox-checked2: "\ee6e";
-@icon-checkbox-unchecked2: "\ee6f";
-@icon-radio-checked: "\ee71";
-@icon-radio-unchecked: "\ee73";
-@icon-scissors2: "\ee84";
-@icon-regexp2: "\eed0";
-@icon-circle-css: "\eed2";
-@icon-circle-code: "\eed3";
-@icon-terminal: "\eed4";
-@icon-npm: "\ef10";
-@icon-scc: "\ef46";
+@icon-regexp-14: "\eed1";
 @icon-search: "\f002";
 @icon-star: "\f005";
 @icon-star-o: "\f006";
@@ -175,12 +118,21 @@
 @icon-map-signs: "\f277";
 @icon-clock-o: "\f017";
 @icon-download: "\f019";
+@icon-refresh: "\f021";
 @icon-bold: "\f032";
 @icon-italic: "\f033";
+@icon-text-height: "\f034";
+@icon-text-width: "\f035";
+@icon-align-left2: "\f037";
 @icon-stop3: "\f04d";
 @icon-plus-circle3: "\f055";
 @icon-minus-circle: "\f056";
 @icon-times-circle: "\f057";
+@icon-arrow-left: "\f060";
+@icon-arrow-right: "\f061";
+@icon-arrow-up: "\f062";
+@icon-arrow-down: "\f063";
+@icon-asterisk2: "\f06b";
 @icon-arrow-circle-right: "\f0a9";
 @icon-arrows-alt: "\f0b2";
 @icon-group: "\f0c0";
@@ -193,4 +145,66 @@
 @icon-trash: "\f1f8";
 @icon-display3: "\f26c";
 @icon-stop-circle: "\f28d";
+@icon-recurse-14: "\ee40";
+@icon-case-insensitive: "\ee91";
+@icon-case-sensitive: "\ee92";
+@icon-smart-case: "\ee93";
+@icon-quill4: "\e91b";
+@icon-bookmark: "\e994";
+@icon-files-empty2: "\e9a0";
+@icon-file-plus2: "\e9a2";
+@icon-copy3: "\e9c7";
+@icon-paste2: "\e9ca";
+@icon-folder-plus: "\e9d4";
+@icon-folder-open: "\e9dc";
+@icon-envelop: "\ea30";
+@icon-printer3: "\ea69";
+@icon-display2: "\ea74";
+@icon-undo2: "\eabf";
+@icon-redo2: "\eac0";
+@icon-users2: "\eaff";
+@icon-users4: "\eb0c";
+@icon-bug: "\eb78";
+@icon-lab: "\ebea";
+@icon-briefcase3: "\ec04";
+@icon-power2: "\ec49";
+@icon-menu3: "\ec6d";
+@icon-sphere2: "\ec92";
+@icon-earth2: "\ec97";
+@icon-question4: "\ed56";
+@icon-plus2: "\ed5b";
+@icon-plus-circle: "\ed5f";
+@icon-plus-circle2: "\ed61";
+@icon-minus-circle2: "\ed62";
+@icon-info2: "\ed64";
+@icon-cancel-circle2: "\ed66";
+@icon-cross3: "\ed6e";
+@icon-checkmark: "\ed6f";
+@icon-checkmark2: "\ed70";
+@icon-play3: "\ed7e";
+@icon-pause: "\ed7f";
+@icon-stop: "\ed80";
+@icon-play: "\ed85";
+@icon-pause2: "\ed86";
+@icon-stop2: "\ed87";
+@icon-arrow-up3: "\edb9";
+@icon-arrow-right2: "\edbc";
+@icon-arrow-right3: "\edbd";
+@icon-arrow-down3: "\edc1";
+@icon-arrow-left2: "\edc4";
+@icon-arrow-up5: "\edc7";
+@icon-arrow-right5: "\edc8";
+@icon-arrow-down5: "\edc9";
+@icon-arrow-left5: "\edca";
+@icon-checkbox-checked2: "\ee6e";
+@icon-checkbox-unchecked2: "\ee6f";
+@icon-radio-checked: "\ee71";
+@icon-radio-unchecked: "\ee73";
+@icon-scissors2: "\ee84";
+@icon-regexp2: "\eed0";
+@icon-circle-css: "\eed2";
+@icon-circle-code: "\eed3";
+@icon-terminal: "\eed4";
+@icon-npm: "\ef10";
+@icon-scc: "\ef46";
 
